# pip-rewind

./: LICENSE  README.md  pyproject.toml
pip_rewind/: cli.py  parser.py  versions.py
tests/: test_parser.py
